objects/ASI_KOR_NSD_Payment_Settlement_By_Brand__c.object
<CustomObject>
    <description>For PRK Phase 2</description>
    <fields>
        <fullName>ASI_KOR_Actual_Pre_payment_Volume__c</fullName>
        <label>Actual Pre-payment Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Actual_Unit_Cost_CA_Only__c</fullName>
        <formula>IF((ISBLANK(ASI_KOR_Actual_Volume__c)||ASI_KOR_Actual_Volume__c==0),0,ASI_KOR_Total_CA_Amount_excl_Basic__c/ASI_KOR_Actual_Volume__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Unit Cost (CA Only)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Actual_Volume_Total__c</fullName>
        <formula>ASI_KOR_Actual_Pre_payment_Volume__c + ASI_KOR_Actual_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Volume (Total)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Actual_Volume__c</fullName>
        <label>Actual Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Approved_Basic_Unit_Cost_Ave__c</fullName>
        <formula>IF((ISBLANK(ASI_KOR_No_of_Submitted_Venues__c)||ASI_KOR_No_of_Submitted_Venues__c==0),0, 
(ASI_KOR_Approved_Basic_Unit_Cost__c/ASI_KOR_No_of_Submitted_Venues__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Basic Unit Cost (Ave)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Approved_Basic_Unit_Cost__c</fullName>
        <label>Approved Basic Unit Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Approved_CA_Unit_CA__c</fullName>
        <label>Approved CA Unit Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Approved_CA_Unit_Cost_Ave__c</fullName>
        <formula>IF((ISBLANK(ASI_KOR_No_of_Submitted_Venues__c)||ASI_KOR_No_of_Submitted_Venues__c==0),0, 
(ASI_KOR_Approved_CA_Unit_CA__c/ASI_KOR_No_of_Submitted_Venues__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved CA Unit Cost (Ave)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Approved_Unit_Cost_Basic_CA__c</fullName>
        <formula>ASI_KOR_Approved_Basic_Unit_Cost_Ave__c + ASI_KOR_Approved_CA_Unit_Cost_Ave__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Unit Cost (Basic+CA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>ASI_KOR_Brand__c</referenceTo>
        <relationshipLabel>NSD Payment Settlement By Brands</relationshipLabel>
        <relationshipName>ASI_KOR_NSD_Payment_Settlement_By_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Budget_Status__c</fullName>
        <formula>IF(ASI_KOR_Actual_Volume__c = 0, 
&quot;Within Target&quot;, 
if( (ASI_KOR_Total_Final_Basic__c/ASI_KOR_Actual_Volume__c) &gt; (ASI_KOR_Budget_Target_VI__c/ASI_KOR_Budget_Target_Volume__c) , &quot;Exceed Target&quot;, &quot;Within Target&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Budget_Target_VI__c</fullName>
        <label>Budget Target VI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Budget_Target_Volume__c</fullName>
        <label>Budget Target Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_CA_Amount_Pending__c</fullName>
        <label>Final CA Amount (Pending)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_CA_Budget_Status__c</fullName>
        <formula>IF( ASI_KOR_Total_Final_CA_Amount_excl_Basic__c &gt; ASI_KOR_CA_Budget__c ,&apos;Exceed Budget&apos;,&apos;Within Budget&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Budget Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_CA_Budget__c</fullName>
        <label>CA Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Category__c</fullName>
        <formula>ASI_KOR_Brand__r.ASI_KOR_Product_Categoray__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Final_Total_Amount__c</fullName>
        <formula>/* before P4.2
ASI_KOR_Total_Final_Basic__c + ASI_KOR_Total_Final_CA_Amount_excl_Basic__c + ASI_KOR_Pre_Payment_Amount__c
*/
ASI_KOR_Total_Final_Basic__c + ASI_KOR_Pre_Payment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_NSD_Payment_Settlement_Header__c</fullName>
        <label>NSD Payment Settlement</label>
        <referenceTo>ASI_KOR_NSD_Payment_Settlement_Header__c</referenceTo>
        <relationshipLabel>NSD Payment Settlement By Brands</relationshipLabel>
        <relationshipName>ASI_KOR_NSD_Payment_Settlement_By_Brands</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_No_of_Submitted_Venues__c</fullName>
        <label>No. of Submitted Venues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Pre_Payment_Amount__c</fullName>
        <label>Pre-Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Progression__c</fullName>
        <formula>IF(
  AND(
    (ISBLANK(ASI_KOR_Target_Volume__c)||ASI_KOR_Target_Volume__c==0),
    (ISBLANK(ASI_KOR_Actual_Volume__c)||ASI_KOR_Actual_Volume__c==0)
  ),
  0,
  IF(
    (ISBLANK(ASI_KOR_Target_Volume__c)||ASI_KOR_Target_Volume__c==0),
    1,
    ASI_KOR_Actual_Volume__c / ASI_KOR_Target_Volume__c
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progression</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Target_Volume__c</fullName>
        <label>Target Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_CA_Amount_Pending__c</fullName>
        <label>Total CA Amount (Pending)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_CA_Amount_excl_Basic__c</fullName>
        <label>Total CA (excl. Basic)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_Final_Basic__c</fullName>
        <label>Total Final Basic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_Final_CA_Amount_excl_Basic__c</fullName>
        <label>Total Final CA (excl. Basic)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_UOM__c</fullName>
        <label>UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NSD Payment Settlement By Brand</label>
    <nameField>
        <displayFormat>NPSI-{000000000}</displayFormat>
        <label>NSD Payment Settlement By Brand ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NSD Payment Settlement By Brands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>